[package]
name = "web-proof-circuits-witness-generator"
version = "0.9.0"                             # Pin to circuits version
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"

client-side-prover = { git = "https://github.com/pluto/client-side-prover", rev = "8e7eb839e901dcee416179116bb0f9c4f7ae683c" }

ff = { version = "0.13", default-features = false, features = ["derive"] }

thiserror = "2.0"

light-poseidon = { git = "https://github.com/pluto/light-poseidon" }

ark-bn254 = "=0.4.0"
halo2curves = "0.6.1"

sppark = "=0.1.10"
num-bigint = "0.4"
